# ShaderCompile

./: CMakeLists.txt  build.sh
ShaderCompile/: ShaderCompile.cpp  basetypes.h
ShaderCompile/include/: robin_hood.h
cmake/toolchains/: mingw64.cmake
